greeting-module/k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: spring-boot-restassured
  name: spring-boot-restassured
  namespace: vass-radar-app
spec:
  ports:
  - name: https
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: spring-boot-restassured
  sessionAffinity: None
  type: ClusterIP
