greeting-module/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: cert-manager-apps-internal
    kubernetes.io/ingress.class: ingressinternal
  labels:
    app: spring-boot-restassured
  name: spring-boot-restassured
  namespace: vass-radar-app
spec:
  rules:
  - host: spring-boot-restassured.52.209.128.30.nip.io
    http:
      paths:
      - backend:
          serviceName: spring-boot-restassured
          servicePort: 80
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - spring-boot-restassured.52.209.128.30.nip.io
    secretName: vassradar2-tls
